--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,14 @@ Spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/sell?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/sell?serverTimezone=UTC&characterEncoding=utf-8&useSSL=false
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-
+server:
+  servlet:
+    context-path: /sell
 #logging:
 #  pattern:
 #    console: "%d - %msg%n"
